# AolkmeSDK

./: README.md
AolkmeSDKLIB/: AolkmeSDKLIB.uvguix.olkme  AolkmeSDKLIB.uvoptx  AolkmeSDKLIB.uvprojx
AolkmeSDKLIB/Aolkme/include/: Aolkme.h  Aolkme_event.h  Aolkme_event_types.h  (+1 more)
AolkmeSDKLIB/Objects/: AolkmeSDKLIB.build_log.htm  AolkmeSDKLIB.lib  AolkmeSDKLIB_AolkmeSDK.dep  ArInp.Scr  aolkme.d  aolkme_1.crf  aolkme_1.d  aolkme_core.crf  aolkme_core.d  aolkme_core_1.crf  aolkme_core_1.d  aolkme_event.crf  aolkme_event.d  aolkme_platform.crf  aolkme_platform.d  aolkme_platform_1.crf  aolkme_platform_1.d  aolkme_verify.crf  aolkme_verify.d  aolkme_verify_1.d  logger_buffer.crf  logger_buffer.d  logger_core.crf  logger_core.d  logger_formatter.crf  logger_formatter.d
AolkmeSDKProject/: AolkmeSDK.ioc  README.md
AolkmeSDKProject/App/: AolkmeSDK_user_info.h  application.c  application.h
AolkmeSDKProject/MDK-ARM/: AolkmeSDK.BAT  AolkmeSDK.uvguix.olkme  AolkmeSDK.uvoptx  AolkmeSDK.uvprojx  startup_stm32f407xx.lst
AolkmeSDKProjectV1/AolkmeESP/: CMakeLists.txt  sdkconfig.old
AolkmeSDKProjectV1/AolkmeESP/components/AolkmeSDK/: CMakeLists.txt
AolkmeSDKProjectV1/AolkmeESP/components/AolkmeSDK/include/: Aolkme_core.h  Aolkme_platform.h
AolkmeSDKProjectV1/AolkmeESP/components/AolkmeSDK/internal/: Aolkme_core_private.h  logger_formatter.h
AolkmeSDKProjectV1/AolkmeESP/components/AolkmeSDK/src/: Aolkme.c  AolkmeSDK.c  Aolkme_core.c  Aolkme_verify.c  logger_buffer.c  logger_formatter.c
AolkmeSDKbootloader/Bootloader/: Bootloader.ioc
AolkmeSDKkeys/: main.py
(+318 files in other folders)
